<resources>
    <string name="app_name">GG Trainer</string>

    <string name="main_tab_0">Translate</string>
    <string name="main_tab_1">Record</string>
    <string name="main_tab_2">Recorded</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <string name="gesture_mapping_hint">Enter your gesture\'s meaning…</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="select_the_device_to_connect">Select the device to connect</string>
    <string name="connect">Connect</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="action_button">Action button</string>
    <string name="sync">Sync</string>
    <string name="options_menu">Options menu</string>
    <string name="no_recorded_gestures">No recorded gestures</string>
    <string name="no_synced_gestures">No synced gestures</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="syncing">Syncing…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synced">Synced</string>
    <string name="tripe_dot">...</string>
    <string name="connect_to_device_to_start_translation">Connect to device to <br/> start the translation.</string>
    <string name="sync_all">Sync all</string>
</resources>